# hsr_manipulation_2019

./: CMakeLists.txt  README.md  TODO  package.xml  tags
action/: putDownMoveit.action
launch/: moveit.launch  moveit_no_rviz.launch
scripts/: grasp_server.py  movegripper_actionserver.py
src/: grasp_client.py  grasp_client_moveit.py  gripper_client.py  putDown_client.py  putdown_client_moveit.py  scene_maker.cpp  scene_updater.cpp
